version 0.9.0
- Track changes in data in scripts, using 'run', without the need for '%L>%'
- Support for multiple loggers; loggers can now support an (automatic) label
  which is used to distinguish output files when multiple datasets are tracked.
- Argument 'log' is replaced by 'logger' in start_log(), dump_log() et al.
- Completely new vignette
- Switched to 'tinytest' testing framework

version 0.3.0
- '%L>%' is now considered the default lumberjack operator. '%>>%' remains as alias.
- Added 'expression_logger': log custom expressions
- Logging now also works for functions that remove the logging attribute.
- The 'cellwise' logger is now compatible with 'tibble' objects (thanks to
  Blain Bateman). 
- Some documentation improvements.

version 0.2.0
- Added '%L>%' as synonym to avoid possible confusion with 'pipeR::`%>>%`'
- Argument 'stop' of 'dump_log' is now 'TRUE' by default (was 'FALSE')
- New logger named 'filedump' dumps data versions to csv.
- Function 'stop_log()' will now call '<logger>$stop()' if defined.
- Package now depends on R >= 3.4.0. Some tests failed on Windows/OSX + R3.3.3

version 0.1.0
- initial release